# Soviet_Calculator

./: CMakeLists.txt  Interface_raw  Interface_raw.cpp  Interface_raw.hpp  Make_Interface  Makefile  README.md  README_INTERFACE.md  REDAME.md  buttons.hpp  claculator.cpp  commands.cpp  commands.hpp  comp  memory.cpp  memory.hpp  Вопросы к ТВ.txt  Список задач.txt
commands/: buttons.hpp
commands/include/: commands.hpp
commands/src/: commands.cpp
commands/tests/: commands_tests.cpp
include/: Interface_raw.hpp  application.hpp  back_panel.hpp  buttons.hpp  calculator.hpp  commands.hpp  double_comparison.hpp  interface.hpp  memory.hpp
memory/include/: memory.hpp
memory/src/: memory.cpp
src/: Interface_raw.cpp  application.cpp  back_panel.cpp  calculator.cpp  commands.cpp  impl_app.cpp  interface.cpp  memory.cpp
